@@ -29,6 +29,7 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -214,7 +215,7 @@ public abstract class UpgradeDependencies extends DefaultTask {
 		List<Library> matchingLibraries = this.bom.getLibraries()
 			.stream()
 			.filter((library) -> libraryPredicate.test(library.getName()))
-			.toList();
+			.collect(Collectors.toList());
 		if (matchingLibraries.isEmpty()) {
 			throw new InvalidUserDataException("No libraries matched '" + pattern + "'");
 		}
