@@ -23,12 +23,8 @@ import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import javax.inject.Inject;
-
+import groovy.lang.Closure;
 import org.gradle.api.Action;
-import org.gradle.api.model.ObjectFactory;
-import org.gradle.api.provider.ListProperty;
-import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.Optional;
 
@@ -51,38 +47,58 @@ import org.springframework.util.Assert;
  * @author Phillip Webb
  * @since 2.3.0
  */
-public abstract class LayeredSpec {
+public class LayeredSpec {
 
-	private ApplicationSpec application;
+	private boolean includeLayerTools = true;
 
-	private DependenciesSpec dependencies;
+	private boolean enabled = true;
+
+	private ApplicationSpec application = new ApplicationSpec();
+
+	private DependenciesSpec dependencies = new DependenciesSpec();
+
+	@Optional
+	private List<String> layerOrder;
 
 	private Layers layers;
-
-	@Inject
-	public LayeredSpec(ObjectFactory objects) {
-		this.application = objects.newInstance(ApplicationSpec.class);
-		this.dependencies = objects.newInstance(DependenciesSpec.class);
-		getEnabled().convention(true);
-		getIncludeLayerTools().convention(true);
-	}
 
 	/**
 	 * Returns whether the layer tools should be included as a dependency in the layered
 	 * archive.
 	 * @return whether the layer tools should be included
-	 * @since 3.0.0
 	 */
 	@Input
-	public abstract Property<Boolean> getIncludeLayerTools();
+	public boolean isIncludeLayerTools() {
+		return this.includeLayerTools;
+	}
+
+	/**
+	 * Sets whether the layer tools should be included as a dependency in the layered
+	 * archive.
+	 * @param includeLayerTools {@code true} if the layer tools should be included,
+	 * otherwise {@code false}
+	 */
+	public void setIncludeLayerTools(boolean includeLayerTools) {
+		this.includeLayerTools = includeLayerTools;
+	}
 
 	/**
 	 * Returns whether the layers.idx should be included in the archive.
 	 * @return whether the layers.idx should be included
-	 * @since 3.0.0
 	 */
 	@Input
-	public abstract Property<Boolean> getEnabled();
+	public boolean isEnabled() {
+		return this.enabled;
+	}
+
+	/**
+	 * Sets whether the layers.idx should be included in the archive.
+	 * @param enabled {@code true} layers.idx should be included in the archive, otherwise
+	 * {@code false}
+	 */
+	public void setEnabled(boolean enabled) {
+		this.enabled = enabled;
+	}
 
 	/**
 	 * Returns the {@link ApplicationSpec} that controls the layers to which application
@@ -109,6 +125,14 @@ public abstract class LayeredSpec {
 	 */
 	public void application(Action<ApplicationSpec> action) {
 		action.execute(this.application);
+	}
+
+	/**
+	 * Customizes the {@link ApplicationSpec} using the given {@code closure}.
+	 * @param closure the closure
+	 */
+	public void application(Closure<?> closure) {
+		application(Closures.asAction(closure));
 	}
 
 	/**
@@ -139,13 +163,38 @@ public abstract class LayeredSpec {
 	}
 
 	/**
+	 * Customizes the {@link DependenciesSpec} using the given {@code closure}.
+	 * @param closure the closure
+	 */
+	public void dependencies(Closure<?> closure) {
+		dependencies(Closures.asAction(closure));
+	}
+
+	/**
 	 * Returns the order of the layers in the archive from least to most frequently
 	 * changing.
 	 * @return the layer order
 	 */
 	@Input
-	@Optional
-	public abstract ListProperty<String> getLayerOrder();
+	public List<String> getLayerOrder() {
+		return this.layerOrder;
+	}
+
+	/**
+	 * Sets the order of the layers in the archive from least to most frequently changing.
+	 * @param layerOrder the layer order
+	 */
+	public void setLayerOrder(String... layerOrder) {
+		this.layerOrder = Arrays.asList(layerOrder);
+	}
+
+	/**
+	 * Sets the order of the layers in the archive from least to most frequently changing.
+	 * @param layerOrder the layer order
+	 */
+	public void setLayerOrder(List<String> layerOrder) {
+		this.layerOrder = layerOrder;
+	}
 
 	/**
 	 * Return this configuration as a {@link Layers} instance. This method should only be
@@ -162,31 +211,32 @@ public abstract class LayeredSpec {
 	}
 
 	private Layers createLayers() {
-		List<String> layerOrder = getLayerOrder().getOrNull();
-		if (layerOrder == null || layerOrder.isEmpty()) {
+		if (this.layerOrder == null || this.layerOrder.isEmpty()) {
 			Assert.state(this.application.isEmpty() && this.dependencies.isEmpty(),
 					"The 'layerOrder' must be defined when using custom layering");
 			return Layers.IMPLICIT;
 		}
-		List<Layer> layers = layerOrder.stream().map(Layer::new).toList();
+		List<Layer> layers = this.layerOrder.stream().map(Layer::new).collect(Collectors.toList());
 		return new CustomLayers(layers, this.application.asSelectors(), this.dependencies.asSelectors());
 	}
 
 	/**
 	 * Base class for specs that control the layers to which a category of content should
 	 * belong.
+	 *
+	 * @param <S> the type of {@link IntoLayerSpec} used by this spec
 	 */
-	public abstract static class IntoLayersSpec implements Serializable {
+	public abstract static class IntoLayersSpec<S extends IntoLayerSpec> implements Serializable {
 
 		private final List<IntoLayerSpec> intoLayers;
 
-		private final Function<String, IntoLayerSpec> specFactory;
+		private final Function<String, S> specFactory;
 
 		boolean isEmpty() {
 			return this.intoLayers.isEmpty();
 		}
 
-		IntoLayersSpec(Function<String, IntoLayerSpec> specFactory, IntoLayerSpec... spec) {
+		IntoLayersSpec(Function<String, S> specFactory, IntoLayerSpec... spec) {
 			this.intoLayers = new ArrayList<>(Arrays.asList(spec));
 			this.specFactory = specFactory;
 		}
@@ -195,14 +245,18 @@ public abstract class LayeredSpec {
 			this.intoLayers.add(this.specFactory.apply(layer));
 		}
 
-		public void intoLayer(String layer, Action<IntoLayerSpec> action) {
-			IntoLayerSpec spec = this.specFactory.apply(layer);
+		public void intoLayer(String layer, Closure<?> closure) {
+			intoLayer(layer, Closures.asAction(closure));
+		}
+
+		public void intoLayer(String layer, Action<S> action) {
+			S spec = this.specFactory.apply(layer);
 			action.execute(spec);
 			this.intoLayers.add(spec);
 		}
 
 		<T> List<ContentSelector<T>> asSelectors(Function<IntoLayerSpec, ContentSelector<T>> selectorFactory) {
-			return this.intoLayers.stream().map(selectorFactory).toList();
+			return this.intoLayers.stream().map(selectorFactory).collect(Collectors.toList());
 		}
 
 	}
@@ -311,14 +365,16 @@ public abstract class LayeredSpec {
 			Layer layer = new Layer(getIntoLayer());
 			List<ContentFilter<Library>> includeFilters = getIncludes().stream()
 				.map(filterFactory)
-				.collect(Collectors.toCollection(ArrayList::new));
+				.collect(Collectors.toList());
 			if (this.includeProjectDependencies) {
+				includeFilters = new ArrayList<>(includeFilters);
 				includeFilters.add(Library::isLocal);
 			}
 			List<ContentFilter<Library>> excludeFilters = getExcludes().stream()
 				.map(filterFactory)
-				.collect(Collectors.toCollection(ArrayList::new));
+				.collect(Collectors.toList());
 			if (this.excludeProjectDependencies) {
+				excludeFilters = new ArrayList<>(excludeFilters);
 				excludeFilters.add(Library::isLocal);
 			}
 			return new IncludeExcludeContentSelector<>(layer, includeFilters, excludeFilters);
@@ -330,12 +386,7 @@ public abstract class LayeredSpec {
 	 * An {@link IntoLayersSpec} that controls the layers to which application classes and
 	 * resources belong.
 	 */
-	public static class ApplicationSpec extends IntoLayersSpec {
-
-		@Inject
-		public ApplicationSpec() {
-			super(new IntoLayerSpecFactory());
-		}
+	public static class ApplicationSpec extends IntoLayersSpec<IntoLayerSpec> {
 
 		/**
 		 * Creates a new {@code ApplicationSpec} with the given {@code contents}.
@@ -364,12 +415,7 @@ public abstract class LayeredSpec {
 	/**
 	 * An {@link IntoLayersSpec} that controls the layers to which dependencies belong.
 	 */
-	public static class DependenciesSpec extends IntoLayersSpec implements Serializable {
-
-		@Inject
-		public DependenciesSpec() {
-			super(new IntoLayerSpecFactory());
-		}
+	public static class DependenciesSpec extends IntoLayersSpec<DependenciesIntoLayerSpec> implements Serializable {
 
 		/**
 		 * Creates a new {@code DependenciesSpec} with the given {@code contents}.
@@ -384,10 +430,11 @@ public abstract class LayeredSpec {
 					(spec) -> ((DependenciesIntoLayerSpec) spec).asLibrarySelector(LibraryContentFilter::new));
 		}
 
-		private static final class IntoLayerSpecFactory implements Function<String, IntoLayerSpec>, Serializable {
+		private static final class IntoLayerSpecFactory
+				implements Function<String, DependenciesIntoLayerSpec>, Serializable {
 
 			@Override
-			public IntoLayerSpec apply(String layer) {
+			public DependenciesIntoLayerSpec apply(String layer) {
 				return new DependenciesIntoLayerSpec(layer);
 			}
 
