@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,19 +16,14 @@
 
 package org.springframework.boot.loader.tools;
 
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
@@ -36,7 +31,7 @@ import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
-import java.util.zip.ZipEntry;
+import java.util.stream.Collectors;
 
 import org.apache.commons.compress.archivers.jar.JarArchiveEntry;
 
@@ -101,10 +96,23 @@ public abstract class Packager {
 	 * @param source the source archive file to package
 	 */
 	protected Packager(File source) {
+		this(source, null);
+	}
+
+	/**
+	 * Create a new {@link Packager} instance.
+	 * @param source the source archive file to package
+	 * @param layoutFactory the layout factory to use or {@code null}
+	 * @deprecated since 2.3.10 for removal in 2.5 in favor of {@link #Packager(File)} and
+	 * {@link #setLayoutFactory(LayoutFactory)}
+	 */
+	@Deprecated
+	protected Packager(File source, LayoutFactory layoutFactory) {
 		Assert.notNull(source, "Source file must not be null");
 		Assert.isTrue(source.exists() && source.isFile(),
 				() -> "Source must refer to an existing file, got " + source.getAbsolutePath());
 		this.source = source.getAbsoluteFile();
+		this.layoutFactory = layoutFactory;
 	}
 
 	/**
@@ -202,8 +210,7 @@ public abstract class Packager {
 		writeLoaderClasses(writer);
 		writer.writeEntries(sourceJar, getEntityTransformer(), libraries.getUnpackHandler(),
 				libraries.getLibraryLookup());
-		Map<String, Library> writtenLibraries = libraries.write(writer);
-		writeNativeImageArgFile(writer, sourceJar, writtenLibraries);
+		libraries.write(writer);
 		if (isLayered()) {
 			writeLayerIndex(writer);
 		}
@@ -211,37 +218,12 @@ public abstract class Packager {
 
 	private void writeLoaderClasses(AbstractJarWriter writer) throws IOException {
 		Layout layout = getLayout();
-		if (layout instanceof CustomLoaderLayout customLoaderLayout) {
-			customLoaderLayout.writeLoadedClasses(writer);
+		if (layout instanceof CustomLoaderLayout) {
+			((CustomLoaderLayout) getLayout()).writeLoadedClasses(writer);
 		}
 		else if (layout.isExecutable()) {
 			writer.writeLoaderClasses();
 		}
-	}
-
-	private void writeNativeImageArgFile(AbstractJarWriter writer, JarFile sourceJar,
-			Map<String, Library> writtenLibraries) throws IOException {
-		Set<String> excludes = new LinkedHashSet<>();
-		for (Map.Entry<String, Library> entry : writtenLibraries.entrySet()) {
-			LibraryCoordinates coordinates = entry.getValue().getCoordinates();
-			ZipEntry zipEntry = (coordinates != null)
-					? sourceJar.getEntry(ReachabilityMetadataProperties.getLocation(coordinates)) : null;
-			if (zipEntry != null) {
-				try (InputStream inputStream = sourceJar.getInputStream(zipEntry)) {
-					ReachabilityMetadataProperties properties = ReachabilityMetadataProperties
-						.fromInputStream(inputStream);
-					if (properties.isOverridden()) {
-						excludes.add(entry.getKey());
-					}
-				}
-			}
-		}
-		NativeImageArgFile argFile = new NativeImageArgFile(excludes);
-		argFile.writeIfNecessary((lines) -> {
-			String contents = String.join("\n", lines) + "\n";
-			writer.writeEntry(NativeImageArgFile.LOCATION,
-					new ByteArrayInputStream(contents.getBytes(StandardCharsets.UTF_8)));
-		});
 	}
 
 	private void writeLayerIndex(AbstractJarWriter writer) throws IOException {
@@ -254,8 +236,8 @@ public abstract class Packager {
 	}
 
 	private EntryTransformer getEntityTransformer() {
-		if (getLayout() instanceof RepackagingLayout repackagingLayout) {
-			return new RepackagingEntryTransformer(repackagingLayout);
+		if (getLayout() instanceof RepackagingLayout) {
+			return new RepackagingEntryTransformer((RepackagingLayout) getLayout());
 		}
 		return EntryTransformer.NONE;
 	}
@@ -380,8 +362,8 @@ public abstract class Packager {
 
 	private void addBootAttributesForLayout(Attributes attributes) {
 		Layout layout = getLayout();
-		if (layout instanceof RepackagingLayout repackagingLayout) {
-			attributes.putValue(BOOT_CLASSES_ATTRIBUTE, repackagingLayout.getRepackagedClassesLocation());
+		if (layout instanceof RepackagingLayout) {
+			attributes.putValue(BOOT_CLASSES_ATTRIBUTE, ((RepackagingLayout) layout).getRepackagedClassesLocation());
 		}
 		else {
 			attributes.putValue(BOOT_CLASSES_ATTRIBUTE, layout.getClassesLocation());
@@ -524,25 +506,24 @@ public abstract class Packager {
 			return this.libraryLookup;
 		}
 
-		Map<String, Library> write(AbstractJarWriter writer) throws IOException {
-			Map<String, Library> writtenLibraries = new LinkedHashMap<>();
+		void write(AbstractJarWriter writer) throws IOException {
+			List<String> writtenPaths = new ArrayList<>();
 			for (Entry<String, Library> entry : this.libraries.entrySet()) {
 				String path = entry.getKey();
 				Library library = entry.getValue();
 				if (library.isIncluded()) {
 					String location = path.substring(0, path.lastIndexOf('/') + 1);
 					writer.writeNestedLibrary(location, library);
-					writtenLibraries.put(path, library);
+					writtenPaths.add(path);
 				}
 			}
-			writeClasspathIndexIfNecessary(writtenLibraries.keySet(), getLayout(), writer);
-			return writtenLibraries;
+			writeClasspathIndexIfNecessary(writtenPaths, getLayout(), writer);
 		}
 
-		private void writeClasspathIndexIfNecessary(Collection<String> paths, Layout layout, AbstractJarWriter writer)
+		private void writeClasspathIndexIfNecessary(List<String> paths, Layout layout, AbstractJarWriter writer)
 				throws IOException {
 			if (layout.getClasspathIndexFileLocation() != null) {
-				List<String> names = paths.stream().map((path) -> "- \"" + path + "\"").toList();
+				List<String> names = paths.stream().map((path) -> "- \"" + path + "\"").collect(Collectors.toList());
 				writer.writeIndexFile(layout.getClasspathIndexFileLocation(), names);
 			}
 		}
